##
## Colorschemes (like themes) for gtranslator.
##

schemesdir = $(datadir)/gtranslator/colorschemes

schemes_DATA = \
	boom-boom.xml \
	default.xml \
	extremely-kabalak.xml \
	kabalak.xml \
	kbabel.xml \
	menesis.xml \
	nizuu.xml \
	tuey.xml \
	waliays.xml \
	zuper.xml

EXTRA_DIST = $(schemes_DATA)
