##
## Colorschemes (like themes) for gtranslator.
##

schemesdir = $(datadir)/gtranslator/colorschemes

schemes_DATA = \
	boom-boom.xml \
	default.xml \
	extremely-kabalak.xml \
	kabalak.xml \
	kbabel.xml \
	menesis.xml \
	mmc.xml \
	nizuu.xml \
	sepia.xml \
	spiffE.xml \
	tuey.xml \
	vim.xml \
	waliays.xml \
	zuper.xml

EXTRA_DIST = $(schemes_DATA)
