##
## Colorschemes (like themes) for gtranslator.
##

schemesdir = $(datadir)/gtranslator/colorschemes

schemes_DATA = \
	arek.xml \
	boom-boom.xml \
	clean.xml \
	curlymonster.xml \
	default.xml \
	extremely-kabalak.xml \
	kabalak.xml \
	kbabel.xml \
	menesis.xml \
	mmc.xml \
	nizuu.xml \
	pdmc.xml \
	sepia.xml \
	spiffE.xml \
	thinice.xml \
	tuey.xml \
	vim.xml \
	waliays.xml \
	zuper.xml

EXTRA_DIST = $(schemes_DATA)
