##
## Our pixmaps will get installed from here.
##

pixmaps_dir = $(datadir)/pixmaps/gtranslator
pixmaps__DATA = \
	about_me.png \
	auto.png \
	autotrans.png \
	comment.png \
	content.png \
	copy_2_tran.png \
	files.png \
	func.png \
	fuzzy.png \
	fuzzy_small.png \
	header.png \
	language.png \
	plural.png \
	plural_small.png \
	recent.png \
	table.png \
	text.png \
	translated.png \
	translated_small.png \
	untranslated.png \
	untranslated_small.png

EXTRA_DIST = $(pixmaps__DATA)
