icondir = $(datadir)/pixmaps/gtranslator
icon_DATA =	\
	gtranslator-plugin.png \
	gtranslator-fuzzy-next.png \
	gtranslator-fuzzy-prev.png \
	gtranslator-untranslated-next.png \
	gtranslator-untranslated-prev.png \
	gtranslator-fuzzy-untranslated-next.png \
	gtranslator-fuzzy-untranslated-prev.png

EXTRA_DIST = \
		$(icon_DATA)

-include $(top_srcdir)/git.mk
