pixdir = join_paths(gtranslator_datadir, 'pixmaps')

install_data([
    'gtranslator-plugin.png',
	'gtranslator-plugin.png',
	'gtranslator-logo.png',
	'gtranslator-fuzzy-next.png',
	'gtranslator-fuzzy-prev.png',
	'gtranslator-untranslated-next.png',
	'gtranslator-untranslated-prev.png',
	'gtranslator-fuzzy-untranslated-next.png',
	'gtranslator-fuzzy-untranslated-prev.png'
], install_dir: pixdir)
