pixmap_data = files(
  'gtranslator-logo.png',
  'gtranslator-fuzzy-next.png',
  'gtranslator-fuzzy-prev.png',
  'gtranslator-fuzzy-untranslated-next.png',
  'gtranslator-fuzzy-untranslated-prev.png',
  'gtranslator-plugin.png',
  'gtranslator-untranslated-next.png',
  'gtranslator-untranslated-prev.png',
)

install_data(
  pixmap_data,
  install_dir: join_paths(gtr_datadir, 'pixmaps'),
)
