# the ./data/ui/Makefile.am file of gtranslator

#
# the ui files' directory
#
Glade_Interfaces_dir = @INTERFACE_DIR@

#
# the data going to the ui files' dir
#
Glade_Interfaces__DATA = preferences.glade

#
# the EXTRA_DIST variable.
#
EXTRA_DIST = \
	$(Glade_Interfaces__DATA) \
	preferences.glade.h
